css/menu.css
body > main {
    position: relative;
    padding-top: 1px;
    background-color: var(--clr-background-menu);
}

body > main > h2 {
    color: var(--clr-on-nav);
    margin-left: 20%;
    margin-bottom: 2px;
}

table.menuTable {
    position: relative;
    width: 60%;
    margin-left: 20%;
    border-collapse: collapse;
    background-color: white;
    border-radius: 10px;
}

table.menuTable > caption {
    color: var(--clr-on-nav);
    margin-top: 15px;
    text-align: left;
    font-weight: bold;
    font-size: x-large;
}

table.menuTable tr > td:nth-child(2) {
    width: clamp(90px, 7vw, 150px);
    text-align: center;
}

table.menuTable tr > td {
    border: 1px solid var(--clr-background-menu);
    padding: 7px;
}

table.menuTable td > h3 {
    margin: 0;
}

img.food_picture{
    clip-path: polygon(100% 0, 100% 80%, 0% 100%, 0 20%);
    height: 60vh;
    width: 100vw;
    position: relative;
    object-fit: cover;
}



div.menu_introduction{

    margin-left: auto;
    margin-right: auto;
    width: 60%;
}

div.menu_introduction > p{
    color: white;
}

div.menu_introduction > h1{
    color: white;
}

